[DEV] routes swagger
