# app/Http/Controllers/PlanetsController.php
@@ -7,44 +7,74 @@ use App\Models\Planets;
 
 class PlanetsController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     */
+/**
+ * @OA\Get(
+ *     path="/api/planets",
+ *     summary="Get a list of users",
+ *     tags={"Planets"},
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response="200", description="Retourne la liste des films")
+ * )
+ */
     public function readAll()
     {
         $planet = Planets::all();
         return response()->json($planet);
     }
     
-    /**
-     * Display the specified resource.
-     */
+/**
+ * @OA\Get(
+ *     path="/api/planets/:id",
+ *     summary="Get a list of users",
+ *     tags={"Planets"},
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response="200", description="Retourne la liste des films")
+ * )
+ */
     public function read(string $id)
     {
         $planet = Planets::find($id);
         return response()->json($planet);
     }
 
-    /**
-     * Store a newly created resource in storage.
-     */
+/**
+ * @OA\Post(
+ *     path="/api/planets",
+ *     summary="Get a list of users",
+ *     tags={"Films"},
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response="200", description="Retourne la liste des films")
+ * )
+ */
     public function create(Request $request)
     {
         $planet = Planets::create($request->all());
     }
 
-    /**
-     * Update the specified resource in storage.
-     */
+/**
+ * @OA\Put(
+ *     path="/api/planets/:id",
+ *     summary="Get a list of users",
+ *     tags={"Planets"},
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response="200", description="Retourne la liste des films")
+ * )
+ */
     public function update(Request $request, string $id)
     {
         $planet = Planets::find($id);
         $planet->update($request->all());
     }
 
-    /**
-     * Remove the specified resource from storage.
-     */
+/**
+ * @OA\Delete(
+ *     path="/api/planets/:id",
+ *     summary="Get a list of users",
+ *     tags={"Planets"},
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response="200", description="Retourne la liste des films")
+ * )
+ */
     public function destroy(string $id)
     {
         $planet = Planets::find($id);
